<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appSplashColor"
    tools:shrinkMode="strict">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="276dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/splashlogo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="Welcome to Theft Protect!"
                android:textColor="@color/grey"
                android:textSize="@dimen/doubleextraLargeText"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/title2"
                android:textColor="#000000"
                android:textSize="@dimen/mediumText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/title3"
                android:textColor="#000000"
                android:textSize="@dimen/mediumText" />

            <TextView
                android:id="@+id/txtCodeGenerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="[generating...]"
                android:textColor="#ff0000"
                android:textSize="@dimen/doubleextraLargeText"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/title4"
                android:textColor="#000000"
                android:textSize="@dimen/mediumText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/title5"
                android:textColor="#000000"
                android:textSize="@dimen/mediumText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/title6"
                android:textColor="#000000"
                android:textSize="@dimen/mediumText" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>